mgmt/yaml/my-py-project-ingress.yaml
# argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-py-project-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-py-project.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-py-project
                port:
                  number: 8080
